css/app.css
.article-card {
  border: 1px solid #d7d7d7;
  margin-bottom: 1.5rem;
  box-shadow: 2px 4px 5px 0px #d7d7d7;
}
.article-card .card-content {
  background: #fff;
  margin: 1.25rem;
}
.article-card .card-content .post-author {
  text-align: center;
}
.article-card .card-content {
  color: #001B00;
}
.article-card .card-content p {
  color: #757D75;
}


.article-card .card-content img.post-icon {
  position: absolute;
  width: 3rem;
  border-radius: 50%;
  margin-top: -3rem;
}
.file-list ul {

  list-style: none;

  margin-bottom: 12px; }

.file-list img {

  border-radius: 5px;

  padding-bottom: 20px; }



/* HR Styles */

.file-list hr {

  margin-bottom: 4px;

  margin-top: 2px; }

.file-list .folder {

  width: 140px; }

.file-list .subfolder {

  width: 120px; }



/* Icon Font Styles */

.file-list .fi-folder, .file-list .fi-torso, .file-list .fi-torsos, .file-list .fi-torsos-all, .file-list .fi-torso-business, .file-list .fi-laptop, .file-list .fi-megaphone {

  color: #0b4f69; }

.file-list .fi-page {

  color: #6f6f6f; }

.file-list .fi-yen, .file-list .fi-dollar, .file-list .fi-euro {

  color: #e5c100; }

.file-list .fi-graph-trend, .file-list .fi-graph-pie, .file-list .fi-graph-bar {

  color: #7a3e48; }

.file-list .fi-social-twitter, .file-list .fi-social-tumblr, .file-list .fi-social-facebook {

  color: #336699; }
.file-list .fi-social-apple, .file-list .fi-social-windows {
  color: #8cc739; }


  .file-list {

    ul {

      list-style: none;

      margin-bottom: 12px;

    }



  /* HR Styles */

    hr {

      margin-bottom: 4px;

      margin-top: 2px;

    }



    .folder {

      width: 140px;

    }

    .subfolder {

      width: 120px;

    }



  /* Icon Font Styles */

    .fi-folder, .fi-torso, .fi-torsos, .fi-torsos-all, .fi-torso-business, .fi-laptop, .fi-megaphone {

      color: #0b4f69;

    }



    .fi-page {

      color: #6f6f6f;

    }



    .fi-yen, .fi-dollar, .fi-euro {

      color: #e5c100;

    }



    .fi-graph-trend, .fi-graph-pie, .fi-graph-bar {

      color: #7A3E48;

    }



    .fi-social-twitter, .fi-social-tumblr, .fi-social-facebook {

      color: #336699;

    }



    .fi-social-apple, .fi-social-windows {

      color: #8cc739;

    }

  }
  .size-30 {
    font-size: 45px;
  }
  .size-25 {
    font-size: 25px;
  }
  .fi-folder {
    color: #87CAFF;
  }
  .right-margin-15{
    margin-right: 15px
  }
  .left-margin-15{
    margin-left: 15px
  }
  h4 {
    color: #079CCD;
  }
.vertical-align {
  padding-top: 5px;
}

